[metadata]
name = vector-pkg-enderrayquaza
version = 2.0.2
author = EnderRayquaza
author_email = EnderRayqaza@gmail.com
description = A package with for classes Vector (2d, 3d, 4d, Nd).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EnderRayquaza/Vector
project_urls =
    Bug Tracker = https://github.com/EnderRayquaza/Vector/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src